update news and authors wrt xft

--- a/AUTHORS
+++ b/AUTHORS
@@ -41,3 +41,5 @@ Florian E.J. Fruth <fejf at rommel stw uni-erlangen de>
 Tim Cooijmans <tim at aapopfiets nl>
 Andreas Seltenreich  <uwi7 at rz uni-karlsruhe de>
 Steve Folta <steve at folta net>
+Midare Kiyura <puce at gmx com>
+Joshua Neuheisel
