document new %M in manpage

--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -657,6 +657,8 @@ The following substitutions happen in format:
 .br
 %l by the last access number,
 .br
+%M by the string \fBMaxsize\fP, if it specifies a maximum size,
+.br
 %n by the window number,
 .br
 %s by window status (\fB*\fP is active window,
