PID support for format_string

--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -660,6 +660,8 @@ The following substitutions happen in format:
 .br
 %i by the X Window ID,
 .br
+%p by the process ID,
+.br
 %l by the last access number,
 .br
 %M by the string \fBMaxsize\fP, if it specifies a maximum size,
