allow window border color to be set seperately for focused and unfocused windows

--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -775,6 +775,14 @@ Default is black.
 The background color of the windows ratpoison creates.
 .br
 Default is white.
+.var fwcolor color
+The border color of the focused window.
+.br
+Default is black.
+.var bwcolor color
+The border color of unfocused windows.
+.br
+Default is black.
 .var barpadding x y
 Set horizontal padding of ratpoison windows to \fIx\fP and vertical
 padding to \fIy\fP.
