--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -370,6 +370,9 @@ Create a new group named \fIgroupf\fP, but do not select it.
 .cmd gnext
 Select the next group. Most window commands only see windows in the
 effective group.
+.cmd gother
+Select the last accessed group. Most window commands only see windows in the
+effective group.
 .cmd gprev
 Select the prior group. Most window commands only see windows in the
 effective group.
