add grename command

--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -378,6 +378,8 @@ Select the prior group. Most window commands only see windows in the
 effective group.
 .cmd gravity [ \fBnw | \fBw | \fBsw | \fBn | \fBc | \fBs | \fBne | \fBe | \fBse ]
 Change how in its frame the current window is aligned.
+.cmd grename
+Rename current group.
 .cmd groups
 Output a list of all groups with their number.
 .cmd gselect group
