fix segfault in banishrel and make it banish to the corner of the frame when there's no window
* update documentation

--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -228,7 +228,7 @@ Banish the rat cursor to the lower right corner of the screen.
 .cmd banishrel
 Banish the rat cursor to the lower right corner of the curren window.
 If there isn't a window in the current frame, it banishes the rat cursor
-to the lower right corner of the screen.
+to the lower right corner of the frame.
 .cmd chdir [ directory ]
 If the optional argument is given, change the current directory
 of ratpoison to \fIdirectory\fP.
