make ratinfo and ratrelinfo work with ratpoison -c and return coordinates relative to current frame when there's no window
* update docs

--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -476,7 +476,7 @@ Quit ratpoison.
 .cmd ratinfo
 Display the x y coordinates of the rat cursor relative to the screen.
 .cmd ratrelinfo
-Display the x y coordinates of the rat cursor relative to the window.
+Display the x y coordinates of the rat cursor relative to the current window or current frame if no window is focused
 .cmd ratwarp x y
 Move the rat cursor to the position (\fIx\fP,\fIy\fP).
 .cmd ratrelwarp deltax deltay
