Update my contact info.
The email address listed for me have not existed for a few years.

--- a/AUTHORS
+++ b/AUTHORS
@@ -24,7 +24,7 @@ Doug Kearns <djkea2 at mugc dot its dot monash dot edu dot au>
 Gergely Nagy <algernon at debian dot org>
 Henrik Enberg <henrik at enberg dot org>
 Jonathan Walther <krooger at debian dot org>
-Martin Samuelsson <rp-contrib at cos dot user dot lysator dot liu dot se>
+Martin Samuelsson, |cos| on #ratpoison 
 Mike Meyer <mwm at mired dot org>
 Nicklas Lindgren <nili at lysator dot liu dot se>
 Pasi Kallinen <pkalli at cs dot joensuu dot fi>
