update Shawn's email address in documentation
* while here, s/EMACS/Emacs/ in the Info manual

--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -829,7 +829,7 @@ Decide if history expansion using ! is available.
 
 Default is 0 (off).
 .SH AUTHOR
-Upstream Author is Shawn Betts <sabetts@vcn.bc.ca>.
+Upstream Author is Shawn Betts <sabetts@gmail.com>.
 .br
 See /usr/share/doc/ratpoison/AUTHORS for other contributors.
 .P
